# packing-packages

./: .buildinfo  HOW_TO_RELEASE.md  README.md  genindex.html  index.html  modules.html  objects.inv  packing_packages.helpers.html  packing_packages.html  packing_packages.install.html  packing_packages.logging.html  packing_packages.pack.html  packing_packages.pack.yaml.html  packing_packages.utils.html  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  packing_packages.doctree  packing_packages.helpers.doctree  packing_packages.install.doctree  packing_packages.logging.doctree  packing_packages.pack.doctree  packing_packages.pack.yaml.doctree  packing_packages.utils.doctree
.doctrees/tutorials/: commandline.doctree  index.doctree  logging.doctree
.github/workflows/: CI.yml  docs.yml  release-pypi.yml
_notes/: sphinx.md
_notes/before_pep518/: setup.cfg
_sources/: index.md  modules.rst.txt  packing_packages.helpers.rst  packing_packages.install.rst.txt  packing_packages.logging.rst.txt  packing_packages.pack.rst.txt  packing_packages.pack.yaml.rst.txt  packing_packages.rst  packing_packages.rst.txt  packing_packages.utils.rst.txt
_sources/tutorials/: index.md
docs_src/: conf.py  index.rst  modules.rst
docs_src/tutorials/: commandline.md  logging.ipynb  logging.py
examples/: test313_linux-64.yaml  test313_win-64.yaml
src/packing_packages/: __init__.py  __main__.py  _core.py  constants.py
src/packing_packages/helpers/: __init__.py  _helpers.py
src/packing_packages/install/: __init__.py  __main__.py  _core.py
src/packing_packages/logging/: __init__.py  _logging.py
src/packing_packages/pack/: __init__.py  (+4 more)
tests/: conftest.py  env.yml  test_constants.py  test_import.py  test_install.py  test_install_core.py  test_install_main.py  test_integration.py  test_logging.py  test_main.py  test_pack.py  test_pack_core.py  test_pack_main.py  test_utils.py  test_yaml_constants.py  test_yaml_core.py  test_yaml_main.py
tutorials/: commandline.html  index.html  logging.html
(+7 files in other folders)
