# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "packing-packages"
dynamic = ["version"]
dependencies = []
requires-python = ">= 3.9"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = "This module provides functionality to pack conda environments and their dependencies into a specified directory."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["anaconda", "conda"]
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
] # https://pypi.org/classifiers/

[project.optional-dependencies]
test = ["pytest"]
dev = ["build"]
optional = ["colorlog", "tqdm", "PyYAML"]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-markdown-tables", "recommonmark"]
gui = ["TkEasyGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/packing-packages"
Documentation = "https://yu9824.github.io/packing-packages/"
PyPI = "https://pypi.org/project/packing-packages/"
Source = "https://github.com/yu9824/packing-packages"
Tracker = "https://github.com/yu9824/packing-packages/issues"
Changelog = "https://github.com/yu9824/packing-packages/blob/main/CHANGELOG.md"

[project.scripts]
packing-packages = "packing_packages.__main__:entrypoint"

# [project.gui-scripts]
# packing-packages-gui = "packing_packages:main_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "packing_packages.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
unfixable = ["F401"]
